resolved conflicts with Noemi's changes and started MediaContentServlet